--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
-    "reactotron-react-js": "^3.3.3"
+    "reactotron-react-js": "^3.3.3",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
